# foxlogicgates

./: BinaryDisplay.cpp  BinaryDisplay.h  CMakeLists.txt  Gate.cpp  Gate.h  MainWindow.cpp  MainWindow.h  Object.h  README.md  icons.h  main.cpp
examples/: 4bit_ripple_carry.xml  AND_OR.xml  full_adder.xml  test_all_gates.xml
icons/: 3NAND.xcf  AND.xcf  BinaryDisplay.xcf  INPUT.xcf  NAND.xcf  NOR.xcf  NOT.xcf  OR.xcf  OUTPUT.xcf  XNOR.xcf  XOR.xcf
